--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 
             <div class="card-body">
                     <card-img>
-                        <img src="./assets/trailer_god.JPG" alt="" draggable="false">
+                        <img src="../assets/trailer_god.JPG" alt="" draggable="false">
                     </card-img>
             </div>
 
             <div class="card-body">
                     <card-img>
-                        <img src="./assets/video_god_02.JPG" alt="" draggable="false">
+                        <img src="../assets/video_god_02.JPG" alt="" draggable="false">
                     </card-img>
             </div>
         </div>
