novas melhorias no layout

--- a/index.html
+++ b/index.html
@@ -31,20 +31,24 @@
                 </ul>
             </nav>
         </header>
+        
         <main id="main">
-            <div class="tilte">
-                <h1>Um nova era de God of War</h1>
-            </div>
-            <div class="text-center">
-                <p>Com a vingança contra os deuses do Olimpo em um passado distante, Kratos agora vive como um mortal no reino dos deuses e monstros nórdicos. É nesse mundo duro e implacável que ele deve lutar para sobreviver... e ensinar seu filho a fazer o mesmo.</p>
-            </div>
-            <div class="btn">
-                <button>Comece a jornada</button>
+            <div class="main-textos">
+                <div class="tilte">
+                    <h1>Um nova era de God of War</h1>
+                </div>
+                <div class="main-text-center">
+                    <p>Com a vingança contra os deuses do Olimpo em um passado distante, Kratos agora vive como um mortal no reino dos deuses e monstros nórdicos. É nesse mundo duro e implacável que ele deve lutar para sobreviver... e ensinar seu filho a fazer o mesmo.</p>
+                </div>
+                <div class="btn">
+                    <button>Comece a jornada</button>
+                </div>
             </div>
             <div class="wrap">
                 <img src="assets/kratos_e_loki.jpg" alt="" draggable="false">
             </div>
         </main>
+
         <aside class="aside">
             <ul>
                 <li> <a href="#" draggable="false"><i class="fa-brands fa-facebook-f"></i></a></li>
@@ -53,17 +57,17 @@
                 <li><a href="#" draggable="false"><i class="fa-brands fa-youtube"></i></a></li>
             </ul>
         </aside>
-        <div class="cards">
 
+        <div class="cards">
             <div class="card-body">
                     <card-img>
-                        <img src="../assets/trailer_god.JPG" alt="" draggable="false">
+                        <img src="./assets/trailer_god.JPG" alt="" draggable="false">
                     </card-img>
             </div>
 
             <div class="card-body">
                     <card-img>
-                        <img src="../assets/video_god_02.JPG" alt="" draggable="false">
+                        <img src="./assets/video_god_02.JPG" alt="" draggable="false">
                     </card-img>
             </div>
         </div>
