--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="card-body">
                     <card-img>
-                        <img src="./assets/video_god_02.JPG" alt="" draggable="false">
+                        <img src="./assets/video_god_02.jpg" alt="" draggable="false">
                     </card-img>
             </div>
         </div>
